feat: edge case fixes and LLM provider abstraction
- Add word boundary regex for keyword matching
- Add welcome message and reset button
- Handle tied scores and negative scores in engine
- Disable input after completion with dynamic placeholder
- Add Vercel AI SDK support with provider switching
- Extended charity/business keywords

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.26",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "ai": "^6.0.77",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.33.0",
