--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.22",
     "@ai-sdk/openai": "^3.0.26",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^6.0.77",
