--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/groq": "^3.0.22",
     "@ai-sdk/openai": "^3.0.26",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^6.0.77",
     "class-variance-authority": "^0.7.1",
